--- a/index.html
+++ b/index.html
@@ -3,15 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hareketli İnsan Resmi</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background: #fafafa;
+    }
+
+    input, button {
+      padding: 10px;
+      font-size: 16px;
+    }
+
+    video {
+      margin-top: 20px;
+      width: 320px;
+      height: auto;
+      border-radius: 12px;
+    }
+  </style>
 </head>
 <body>
   <h2>Bir yüz fotoğrafı yükle, AI ile canlansın</h2>
   <input type="file" id="fileInput" accept="image/*" />
-  <button onclick="sendToDID()">Canlandır</button>
+  <button id="btn">Canlandır</button>
   <br><br>
   <video id="resultVideo" controls autoplay loop></video>
 
-  <script src="script.js"></script>
+  <script>
+    document.getElementById("btn").addEventListener("click", sendToDID);
+
+    async function sendToDID() {
+      const fileInput = document.getElementById('fileInput');
+      const file = fileInput.files[0];
+
+      if (!file) {
+        alert("Lütfen bir fotoğraf yükleyin.");
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onloadend = async () => {
+        const base64Image = reader.result.split(',')[1];
+
+        // Test: sadece buton çalışıyor mu görmek için
+        alert("Resim yüklendi, (gerçek API gönderimi kapalı)");
+
+        // Aşağıdaki satırları sadece API key aldıktan sonra aktif et
+        /*
+        const response = await fetch("https://api.d-id.com/talks", {
+          method: "POST",
+          headers: {
+            "Authorization": "Bearer SENIN_API_ANAHTARIN", // API key buraya
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            script: {
+              type: "text",
+              input: "Merhaba, ben konuşuyorum."
+            },
+            source_url: `data:image/jpeg;base64,${base64Image}`
+          })
+        });
+
+        const result = await response.json();
+        const video = document.getElementById('resultVideo');
+        video.src = `https://api.d-id.com/talks/${result.id}/video`;
+        */
+      };
+
+      reader.readAsDataURL(file);
+    }
+  </script>
 </body>
 </html>
